# django-typescript-routes

./: CHANGELOG.md  justfile  pyproject.toml  pytest.ini
scripts/: test
tests/: logic--test-monkeypatching.py  logic--test.py  urls_basic.py
typescript_routes/lib/: logic.py
typescript_routes/management/commands/: generate_typescript_routes.py
