[project]
name = "django-typescript-routes"
version = "0.4.0"
description = "Generate typescript routes from a Django URLconf"
authors = [{ name = "Justin Duke", email = "justin@buttondown.email" }]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = ["Django>=5.1,<7"]

[project.urls]
Repository = "https://github.com/buttondown-email/django-typescript-routes"

[dependency-groups]
dev = [
    "pytest>=7.4.0,<8",
    "ruff>=0.0.284,<0.0.285",
]

[tool.hatch.build.targets.sdist]
include = ["typescript_routes"]

[tool.hatch.build.targets.wheel]
include = ["typescript_routes"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
